// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Checkbox AvecMessage smoke-test 1`] = `
<div class="flex flex-col w-max">
  <label class="inline-flex items-center cursor-pointer  text-grey-8">
    <input type="checkbox"
           class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
    >
    <span class="pl-2">
      Description de l'action
    </span>
  </label>
  <div class="flex items-center text-grey-7 pt-1 pl-7">
    <span class="text-xs">
      Description additionnelle
    </span>
  </div>
</div>
`;

exports[`Design System/Checkbox AvecMessageEtEtat smoke-test 1`] = `
<div class="flex flex-col w-max">
  <label class="inline-flex items-center cursor-pointer  text-grey-8">
    <input type="checkbox"
           class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
    >
    <span class="pl-2">
      Description de l'action
    </span>
  </label>
  <div class="flex items-center text-info-1 pt-1 pl-7">
    <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
    </span>
    <span class="text-xs">
      Description additionnelle
    </span>
  </div>
</div>
`;

exports[`Design System/Checkbox Checked smoke-test 1`] = `
<div class="flex flex-col w-max">
  <label class="inline-flex items-center cursor-pointer  text-grey-8">
    <input type="checkbox"
           class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
           checked
    >
    <span class="pl-2">
      Description de l'action
    </span>
  </label>
</div>
`;

exports[`Design System/Checkbox CheckedAndDisabled smoke-test 1`] = `
<div class="flex flex-col w-max">
  <label class="inline-flex items-center cursor-pointer  text-grey-6">
    <input type="checkbox"
           class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
           disabled
           checked
    >
    <span class="pl-2">
      Description de l'action
    </span>
  </label>
</div>
`;

exports[`Design System/Checkbox SansLabel smoke-test 1`] = `
<div class="flex flex-col w-max">
  <input type="checkbox"
         class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
  >
</div>
`;

exports[`Design System/Checkbox Unchecked smoke-test 1`] = `
<div class="flex flex-col w-max">
  <label class="inline-flex items-center cursor-pointer  text-grey-8">
    <input type="checkbox"
           class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
    >
    <span class="pl-2">
      Description de l'action
    </span>
  </label>
</div>
`;

exports[`Design System/Checkbox UncheckedAndDisabled smoke-test 1`] = `
<div class="flex flex-col w-max">
  <label class="inline-flex items-center cursor-pointer  text-grey-6">
    <input type="checkbox"
           class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
           disabled
    >
    <span class="pl-2">
      Description de l'action
    </span>
  </label>
</div>
`;

exports[`Design System/Checkbox VarianteSwitch smoke-test 1`] = `
<div class="flex flex-col w-max">
  <label class="inline-flex items-center cursor-pointer  text-grey-8">
    <input type="checkbox"
           class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 relative bg-grey-4 rounded-full w-10 h-6 before:absolute before:h-4 before:w-4 before:left-1 before:top-1 before:bg-white before:duration-200 before:rounded-full checked:text-primary checked:before:translate-x-4 checked:before:flex checked:before:items-center checked:before:justify-center"
    >
    <span class="pl-2">
      Description de l'action
    </span>
  </label>
  <div class="flex items-center text-info-1 pt-1 pl-12">
    <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
    </span>
    <span class="text-xs">
      Description additionnelle
    </span>
  </div>
</div>
`;

exports[`Design System/Checkbox VarianteSwitchChecked smoke-test 1`] = `
<div class="flex flex-col w-max">
  <label class="inline-flex items-center cursor-pointer  text-grey-8">
    <input type="checkbox"
           class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 relative bg-grey-4 rounded-full w-10 h-6 before:absolute before:h-4 before:w-4 before:left-1 before:top-1 before:bg-white before:duration-200 before:rounded-full checked:text-primary checked:before:translate-x-4 checked:before:flex checked:before:items-center checked:before:justify-center"
           checked
    >
    <span class="pl-2">
      Description de l'action
    </span>
  </label>
  <div class="flex items-center text-info-1 pt-1 pl-12">
    <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
    </span>
    <span class="text-xs">
      Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée
    </span>
  </div>
</div>
`;

exports[`Design System/Checkbox VarianteSwitchDisabled smoke-test 1`] = `
<div class="flex flex-col w-max">
  <label class="inline-flex items-center cursor-pointer  text-grey-6">
    <input type="checkbox"
           class="!appearance-none checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 relative bg-grey-4 rounded-full w-10 h-6 before:absolute before:h-4 before:w-4 before:left-1 before:top-1 before:bg-white before:duration-200 before:rounded-full checked:text-primary checked:before:translate-x-4 checked:before:flex checked:before:items-center checked:before:justify-center"
           disabled
           checked
    >
    <span class="pl-2">
      Description de l'action
    </span>
  </label>
</div>
`;
